apps/external/syncnas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncnas
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.48
  ports:
    - name: http
      port: 8384
      targetPort: 8384
