apps/external/syncnas/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncnas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncnas.joejad.com`)
      kind: Rule
      services:
        - name: syncnas
          port: 8384
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
